# OI-Interface-Tools

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  GreyImg.py  HDUListPlus.py  ImagingFile.py  InitImg.py  Makefile  README.md  dev-requirements.txt  image-oi-input.py  image_oi_input.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  unittest.cfg
.github/workflows/: black.yml  ci.yml
imageoi/: GreyImg.py  ImagingFile.py  __init__.py  fitshelpers.py  imagingfile.py  initimage.py
imageoi/imgen/: __main__.py
imageoi/tool/: __main__.py
tests/: Bin_Ary--MIRC_H.fits  __init__.py  test_HDUListPlus.py  test_ImagingFile.py  test_fitshelpers.py  test_image_oi_input.py  test_imagingfile.py  test_imgen.py  test_initimage.py  test_pep8.py  test_tool.py
