[metadata]
name = OI-Interface-Tools
summary = Tools for managing OI image reconstruction input files
license = GPLv2
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/jsy1001/OI-Interface-Tools
author = John Young
author_email = jsy1001@cam.ac.uk
classifier =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
project_urls =
    Bug Reports = https://github.com/jsy1001/OI-Interface-Tools/issues

[files]
packages =
    imageoi

[entry_points]
console_scripts =
    image-oi-tool = imageoi.tool.__main__:main
    imgen = imageoi.imgen.__main__:main
